terminé el html basico del header

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    
+   <header>
+    <p>LOGO</p>
+    <nav>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Services</a>
+        <a href="">Portfolio</a>
+        <a href="">Contact</a>
+    </nav>
+    <button>Hire Me</button>
+   </header>
+   <main>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+   </main>
+   <footer></footer> 
 </body>
 </html>
