terminé el html básico del hero

--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
     <button>Hire Me</button>
    </header>
    <main>
-    <section></section>
+    <section class="hero">
+        <div>
+            <h1>HELLO</h1>
+            <h2>Im James Patrick</h2>
+            <button></button>
+            <p>Professional UI/UX Designer With 4 Years Of Work Experience</p>
+            <button>Download CV</button>
+        </div>
+        <div class="contenedorRedesSociales">
+            <p>Follow me</p>
+            <button></button>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
