termine el html básico de la seccion dos

--- a/index.html
+++ b/index.html
@@ -36,11 +36,40 @@
             <img src="" alt="">
             <img src="" alt="">
         </div>
-        <div>
             <img src="" alt="">
-        </div>
     </section>
-    <section></section>
+    <section class="seccionDos">
+    <div>
+            <h1>ABOUT</h1>
+    </div>
+    <div class="contenedorBio">
+        <div>
+            <button>Bio</button>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia nihil architecto id nobis. Nobis, mollitia velit! Harum blanditiis explicabo porro beatae, ab odit sint, amet enim ipsa et deleniti iure?</p>
+        </div>
+        <div>
+            <button>Education</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet facere vitae sint culpa dolorem. Impedit in est amet placeat atque porro reprehenderit nisi ea quia blanditiis, quas, nemo quis vero?</p>
+        </div>
+        <div>
+            <button>Experience</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor laboriosam recusandae distinctio modi veritatis ut iste perspiciatis, quidem quod hic reprehenderit! Soluta culpa fuga nihil ducimus alias vero incidunt rem.</p>
+        </div>
+    </div>
+    <div>
+        <p>Age:...29</p>
+        <p>Frelance:...Available</p>
+        <p>Phone:...+59-3483-511254</p>
+        <p>Nationality:...Argentina</p>
+        <p>Adress:...Vera-Santa Fe, Argentina</p>
+        <p>Email:...rodrigohmonte16@gmail.com</p>
+    </div>
+    <div>
+        <button>Contact Me</button>
+        <button>Hire Now</button>
+    </div>
+    <img src="" alt="">
+    </section>
     <section></section>
     <section></section>
     <section></section>
