terminé el html básico de la seccion 4

--- a/index.html
+++ b/index.html
@@ -70,8 +70,57 @@
     </div>
     <img src="" alt="">
     </section>
-    <section></section>
-    <section></section>
+    <section class="seccionSkill">
+    <div>
+        <h1>SKILL</h1>
+    </div>
+    <div>
+        <button>UI/UX</button>
+        <button>Graphic Desing</button>
+        <button>Languague</button>
+    </div>
+    <div>
+        <div>
+            <h2>Adobe Photoshop</h2>
+            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        </div>
+        <div>
+            <h2>Adobe XD</h2>
+            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        </div>
+        <div>
+            <h2>Prototyping</h2>
+            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        </div>
+        <div>
+            <h2>Planning & Analytis</h2>
+            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        </div>
+    </div>
+    </section>
+    <section class="seccionPortfolio">
+        <div>
+            <h1>PORTFOLIO</h1>
+        </div> 
+        <div>
+            <button>All</button>
+            <button>Graphic Desing</button>
+            <button>Branding</button>
+            <button>Web UI</button>
+            <button>App UI</button>
+        </div>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div>
+            <button>View All</button>
+        </div>
+    </section>
     <section></section>
     <section></section>
    </main>
