terminé el html básico de la seccion 5

--- a/index.html
+++ b/index.html
@@ -121,7 +121,17 @@
             <button>View All</button>
         </div>
     </section>
-    <section></section>
+    <section class="seccionContacto">
+        <div>
+            <h1>CONTACT</h1>
+        </div>
+        <div>
+            <input type="text" placeholder="Your Name*">
+            <input type="text" placeholder="E-mail Adress*">
+            <input type="text" placeholder="Massage*">
+            <button>Submit</button>
+        </div>
+    </section>
     <section></section>
    </main>
    <footer></footer> 
