terminé el html básico del footer

--- a/index.html
+++ b/index.html
@@ -132,8 +132,44 @@
             <button>Submit</button>
         </div>
     </section>
-    <section></section>
    </main>
-   <footer></footer> 
+   <footer>
+    <div>
+        <p>LOGO</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora officiis dolore delectus eligendi. Enim, exercitationem iste. Dicta maiores, quis atque ad sit totam consectetur deserunt iusto repudiandae suscipit sunt autem.</p>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+    <div>
+        <div>
+            <h3>Quick Link</h3>
+            <button>Home</button>
+            <button>About me</button>
+            <button>Portfolio</button>
+            <button>Gallery</button>
+        </div>
+        <div>
+            <h3>Quick Link</h3>
+            <p>Data Research</p>
+            <p>User Analytics</p>
+            <p>UI/UX Desing</p>
+            <p>Logo Desing</p>
+            <p>Application UI</p>
+            <p>Banner for website</p>
+            <p>BG remove</p>
+        </div>
+        <div>
+            <h3>Contact</h3>
+            <p>Mitre 1380, Vera-Santa Fe, Argentina</p>
+            <p>Teléfono:+59-3483-511254</p>
+            <p>Email: rodrigohmonte16@gmail.com</p>
+        </div>
+    </div>
+    <div>
+        <img src="" alt="">
+        <p>2020, All Right Reserve</p>
+    </div>
+   </footer> 
 </body>
 </html>
