cambios en el hero de css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </nav>
     <button>Hire Me</button>
    </header>
+   <!--comienzo del hero/-->
    <main>
     <section class="hero">
         <div>
@@ -36,8 +37,9 @@
             <img src="" alt="">
             <img src="" alt="">
         </div>
-            <img src="" alt="">
+            <img class="imgHero" src="img/imagenUno.png" alt="">
     </section>
+    <!--comienzo página dos/-->
     <section class="seccionDos">
     <div>
             <h1>ABOUT</h1>
@@ -70,6 +72,7 @@
     </div>
     <img src="" alt="">
     </section>
+    <!--comienzo página tres/-->
     <section class="seccionSkill">
     <div>
         <h1>SKILL</h1>
@@ -98,6 +101,7 @@
         </div>
     </div>
     </section>
+    <!--comienzo página cuatro/-->
     <section class="seccionPortfolio">
         <div>
             <h1>PORTFOLIO</h1>
@@ -121,6 +125,7 @@
             <button>View All</button>
         </div>
     </section>
+    <!--comienzo página cinco/-->
     <section class="seccionContacto">
         <div>
             <h1>CONTACT</h1>
@@ -133,6 +138,7 @@
         </div>
     </section>
    </main>
+   <!--comienzo del footer/-->
    <footer>
     <div>
         <p>LOGO</p>
