--- a/index.html
+++ b/index.html
@@ -41,36 +41,43 @@
     </section>
     <!--comienzo página dos/-->
     <section class="seccionDos">
-    <div>
-            <h1>ABOUT</h1>
+    <div class="divTituloImg">
+        <h1>ABOUT</h1> 
+    <img class="imgPaginaDos" src="img/imgPaginaDos.jpg" alt="">
     </div>
-    <div class="contenedorBio">
+    <div class="divContenedor">
+      <div class="divContenedorBio">    
         <div>
             <button>Bio</button>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia nihil architecto id nobis. Nobis, mollitia velit! Harum blanditiis explicabo porro beatae, ab odit sint, amet enim ipsa et deleniti iure?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia nihil architecto id nobis. Nobis, mollitia velit! Harum blanditiis explicabo</p>
         </div>
         <div>
             <button>Education</button>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet facere vitae sint culpa dolorem. Impedit in est amet placeat atque porro reprehenderit nisi ea quia blanditiis, quas, nemo quis vero?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet facere vitae sint culpa dolorem. Impedit in est amet placeat atque porro</p>
         </div>
         <div>
             <button>Experience</button>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor laboriosam recusandae distinctio modi veritatis ut iste perspiciatis, quidem quod hic reprehenderit! Soluta culpa fuga nihil ducimus alias vero incidunt rem.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor laboriosam recusandae distinctio modi veritatis ut iste perspiciatis</p>
         </div>
-    </div>
-    <div>
-        <p>Age:...29</p>
-        <p>Frelance:...Available</p>
-        <p>Phone:...+59-3483-511254</p>
+       </div>
+    
+    <div class="divDatosdeContacto">
+        <div>
+            <p>Age:...29</p>
+            <p>Frelance:...Available</p>
+            <p>Phone:...+59-3483-511254</p>
+        </div>
+        <div>   
         <p>Nationality:...Argentina</p>
         <p>Adress:...Vera-Santa Fe, Argentina</p>
         <p>Email:...rodrigohmonte16@gmail.com</p>
+        </div>
     </div>
-    <div>
+    <div class="divBotonesPagDos">
         <button>Contact Me</button>
         <button>Hire Now</button>
     </div>
-    <img src="" alt="">
+    </div>
     </section>
     <!--comienzo página tres/-->
     <section class="seccionSkill">
