terminé la primera pasada

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <p>Professional UI/UX Designer With 4 Years Of Work Experience</p>
             <button>Download CV</button>
         </div>
+        <img class="imgHero" src="img/imagenUno.png" alt="">
         <div class="contenedorRedesSociales">
             <p>Follow me</p>
             <button></button>
@@ -37,7 +38,7 @@
             <img src="" alt="">
             <img src="" alt="">
         </div>
-            <img class="imgHero" src="img/imagenUno.png" alt="">
+            
     </section>
     <!--comienzo página dos/-->
     <section class="seccionDos">
@@ -137,7 +138,7 @@
         <div>
             <h1>CONTACT</h1>
         </div>
-        <div>
+        <div class="divInput">
             <input type="text" placeholder="Your Name*">
             <input type="text" placeholder="E-mail Adress*">
             <input type="text" placeholder="Massage*">
@@ -147,21 +148,24 @@
    </main>
    <!--comienzo del footer/-->
    <footer>
+    <div class="divFooter">
     <div>
         <p>LOGO</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora officiis dolore delectus eligendi. Enim, exercitationem iste. Dicta maiores, quis atque ad sit totam consectetur deserunt iusto repudiandae suscipit sunt autem.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
     </div>
     <div>
-        <div>
+    <div class="divQuick">
+        <div class="divQuickLink">
             <h3>Quick Link</h3>
             <button>Home</button>
             <button>About me</button>
             <button>Portfolio</button>
             <button>Gallery</button>
-        </div>
+        </div>   
+        
         <div>
             <h3>Quick Link</h3>
             <p>Data Research</p>
@@ -178,6 +182,8 @@
             <p>Teléfono:+59-3483-511254</p>
             <p>Email: rodrigohmonte16@gmail.com</p>
         </div>
+    </div>   
+    </div>
     </div>
     <div>
         <img src="" alt="">
