hice otros cambios en el hero

--- a/index.html
+++ b/index.html
@@ -6,37 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
    <header>
-    <p>LOGO</p>
+    <h2>Rodrigo</h2>
     <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Services</a>
-        <a href="">Portfolio</a>
-        <a href="">Contact</a>
+        <a href="#">Home</a>
+        <a href="#">Acerca de mí</a>
+        <a href="#">Services</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contacto</a>
     </nav>
-    <button>Hire Me</button>
+    <button class="botonContratame">Contratame</button>
    </header>
    <!--comienzo del hero/-->
    <main>
     <section class="hero">
         <div>
-            <h1>HELLO</h1>
-            <h2>Im James Patrick</h2>
+            <h1 class="hola">HOLA</h1>
+            <div class="soy">
+                <p>Soy</p>
+            </div>
+            
+            <div class="divNombre">
+            <p class="montenegro">Montenegro</p>
+            <h2 class="rodrigo">Rodrigo</h2>
+        </div>
             <button></button>
             <p>Professional UI/UX Designer With 4 Years Of Work Experience</p>
             <button>Download CV</button>
         </div>
         <img class="imgHero" src="img/imagenUno.png" alt="">
         <div class="contenedorRedesSociales">
-            <p>Follow me</p>
-            <button></button>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <p>Sigueme</p>
+            <button class="botonRedesSociales"></button>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-whatsapp"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
         </div>
             
     </section>
