más cambios en el hero

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">Portfolio</a>
         <a href="#">Contacto</a>
     </nav>
-    <button class="botonContratame">Contratame</button>
+    <button class="botonContratame"></i>Contratame</button>
    </header>
    <!--comienzo del hero/-->
    <main>
@@ -33,15 +33,19 @@
             <p class="montenegro">Montenegro</p>
             <h2 class="rodrigo">Rodrigo</h2>
         </div>
-            <button></button>
-            <p>Professional UI/UX Designer With 4 Years Of Work Experience</p>
-            <button>Download CV</button>
+        <div class="divCurriculum">
+            <button class="botonCurriculum"></button>
+            <p class="profesor">Profesor de Economía, Profesor de Informática </p>
+            <p>y Diseñador Web Principiante</p>
+            <button class="botonDescargarCv"><i class="bi bi-cloud-arrow-down-fill"></i> Descargar CV</button>
+            
+        </div>
         </div>
         <img class="imgHero" src="img/imagenUno.png" alt="">
         <div class="contenedorRedesSociales">
-            <p>Sigueme</p>
+            <p class="sigueme">Sigueme</p>
             <button class="botonRedesSociales"></button>
-            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
             <a href="#"><i class="bi bi-instagram"></i></a>
             <a href="#"><i class="bi bi-whatsapp"></i></a>
             <a href="#"><i class="bi bi-twitter"></i></a>
