header y hero casi terminados

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="divCurriculum">
             <button class="botonCurriculum"></button>
             <p class="profesor">Profesor de Economía, Profesor de Informática </p>
-            <p>y Diseñador Web Principiante</p>
+            <p class="diseñadorWeb">y Diseñador Web Principiante</p>
             <button class="botonDescargarCv"><i class="bi bi-cloud-arrow-down-fill"></i> Descargar CV</button>
             
         </div>
