seccion 3 casi terminada

--- a/index.html
+++ b/index.html
@@ -104,30 +104,77 @@
     <!--comienzo página tres/-->
     <section class="seccionSkill">
     <div>
-        <h1>SKILL</h1>
+        <h1 class="tituloSeccionSkill">HABILIDADES</h1>
     </div>
-    <div>
-        <button>UI/UX</button>
-        <button>Graphic Desing</button>
-        <button>Languague</button>
+    <div class="divaSeccionSkill">
+        <a href="#">UI/UX</a>
+        <a href="#">Graphic Desing</a>
+        <a href="#">Languague</a>
     </div>
-    <div>
-        <div>
-            <h2>Adobe Photoshop</h2>
-            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+    <div class="divAdobes">
+        <div class="divAdobePhoto">
+            <p class="pAdobePhoto">Adobe Photoshop</p>
+            <div class="circulosAdobe">
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+                </div>
+                <p class="pDivAdobe">90%</p>
         </div>
-        <div>
-            <h2>Adobe XD</h2>
-            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        <div class="divContenedorAdobeXd">
+            <p class="pAdobeXD">Adobe XD</p>
+            <div class="circulosAdobeXd">
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            </div>
+            <p class="pDivAdobeXd">70%</p>
+        <div class="divContenedorProto">
+            <p class="pproto">Prototyping</p>
+            <div class="CirculosProto">
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            </div>
         </div>
-        <div>
-            <h2>Prototyping</h2>
-            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        <p class="pDivProto">40%</p>
+        <div class="divContenedorPlaning">
+            <p class="pplaning">Planning & Analytis</p>
+            <div class="CirculosPlaning">
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <i class="bi bi-circle-fill"></i>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            <span style="color: rgb(23, 27, 60);"><i class="bi bi-circle-fill"></i></span>
+            </div>
         </div>
-        <div>
-            <h2>Planning & Analytis</h2>
-            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
-        </div>
+        <p class="pDivPlaning">80%</p>
     </div>
     </section>
     <!--comienzo página cuatro/-->
