hice cambios en la 4ta página

--- a/index.html
+++ b/index.html
@@ -180,25 +180,28 @@
     <!--comienzo página cuatro/-->
     <section class="seccionPortfolio">
         <div>
-            <h1>PORTFOLIO</h1>
+            <h1 class="tituloSeccionPortfolio">PORTFOLIO</h1>
         </div> 
-        <div>
-            <button>All</button>
-            <button>Graphic Desing</button>
-            <button>Branding</button>
-            <button>Web UI</button>
-            <button>App UI</button>
+        <div class="divaSeccionPortfolio">
+            <a href="">All</a>
+            <a href="">Graphic Desing</a>
+            <a href="">Branding</a>
+            <a href="">Web UI</a>
+            <a href="">App UI</a>
         </div>
         <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img class="ImgUno" src="img/imgUno.png" alt="">
+            <img class="ImgDos" src="img/ImgDos.png" alt="">
+            <img class="ImgTres" src="img/ImgTres.png" alt="">
+            <div class="divImgArriba">
+            <img class="ImgCuatro" src="img/ImgCuatro.png" alt="">
+            <img class="ImgCinco" src="img/ImgCinco.png" alt="">
+            </div>
+            <img class="ImgSeis" src="img/ImgSeis.png" alt="">
+            
         </div>
         <div>
-            <button>View All</button>
+            <button class="botonPortfolio">View All</button>
         </div>
     </section>
     <!--comienzo página cinco/-->
