seeccion 4 casi terminada, solo faltan detalles

--- a/index.html
+++ b/index.html
@@ -189,17 +189,104 @@
             <a href="">Web UI</a>
             <a href="">App UI</a>
         </div>
-        <div>
-    
-            <img class="ImgUno" src="img/imgUno.png" alt="">
-            <img class="ImgDos" src="img/ImgDos.png" alt="">
-            <img class="ImgTres" src="img/ImgTres.png" alt="">
-            <div class="divImgArriba">
-            <img class="ImgCuatro" src="img/ImgCuatro.png" alt="">
-            <img class="ImgCinco" src="img/ImgCinco.png" alt="">
+        <div class="grid">
+            <div class="grid-itemUno">
+                <div class="galeria-imagenesUno">
+                    <img src="img/ImgUno.png" alt="">
+                    <div class="img-overlayUno">
+                        <div class="plus"></div>
+                        <div class="img-descriptionCinco">
+                            <h3>Proyecto 5</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <img class="ImgSeis" src="img/ImgSeis.png" alt="">
-            
+            <div class="grid-itemDos">
+                <div class="galeria-imagenes">
+                    <img src="img/ImgDos.png" alt="">
+                    <div class="img-overlay">
+                        <div class="plus"></div>
+                        <div class="img-description">
+                            <h3>Proyecto 3</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-itemTres">
+                <div class="galeria-imagenes">
+                    <img src="img/ImgTres.png" alt="">
+                    <div class="img-overlay">
+                        <div class="plus"></div>
+                        <div class="img-description">
+                            <h3>Proyecto 2</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-itemCuatro">
+                <div class="galeria-imagenes">
+                    <img src="img/ImgCuatro.png" alt="">
+                    <div class="img-overlay">
+                        <div class="plus"></div>
+                        <div class="img-description">
+                            <h3>Proyecto 1</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-itemCinco">
+                <div class="galeria-imagenesCinco">
+                    <img src="img/ImgCinco.png" alt="">
+                    <div class="img-overlayCinco">
+                        <div class="plus"></div>
+                        <div class="img-descriptionCuatro">
+                            <h3>Proyecto 4</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-itemSeis">
+                <div class="galeria-imagenesSeis">
+                    <img src="img/ImgSeis.png" alt="">
+                    <div class="img-overlaySeis">
+                        <div class="plus"></div>
+                        <div class="img-descriptionSiete">
+                            <h3>Proyecto 7</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-itemSiete">
+                <div class="galeria-imagenesSiete">
+                    <img src="img/ImgUno.png" alt="">
+                    <div class="img-overlaySiete">
+                        <div class="plus"></div>
+                        <div class="img-descriptionOcho">
+                            <h3>Proyecto 8</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-itemOcho">
+                <div class="galeria-imagenesOcho">
+                    <img src="img/ImgDos.png" alt="">
+                    <div class="img-overlayOcho">
+                        <div class="plus"></div>
+                        <div class="img-descriptionSeis">
+                            <h3>Proyecto 6</h3>
+                            <h5>Ver Demostración</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         <div>
             <button class="botonPortfolio">View All</button>
