seccion 4 casi terminada

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                         <div class="img-descriptionCinco">
                             <h3>Proyecto 5</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirCinco"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
@@ -210,6 +211,7 @@
                         <div class="img-description">
                             <h3>Proyecto 3</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirUno"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
@@ -222,6 +224,7 @@
                         <div class="img-description">
                             <h3>Proyecto 2</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirUno"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
@@ -234,6 +237,7 @@
                         <div class="img-description">
                             <h3>Proyecto 1</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirUno"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
@@ -246,6 +250,7 @@
                         <div class="img-descriptionCuatro">
                             <h3>Proyecto 4</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirCuatro"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
@@ -258,6 +263,7 @@
                         <div class="img-descriptionSiete">
                             <h3>Proyecto 7</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirSiete"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
@@ -270,6 +276,7 @@
                         <div class="img-descriptionOcho">
                             <h3>Proyecto 8</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirSiete"><i class="bi bi-arrows-fullscreen"></i></p
                         </div>
                     </div>
                 </div>
@@ -282,6 +289,7 @@
                         <div class="img-descriptionSeis">
                             <h3>Proyecto 6</h3>
                             <h5>Ver Demostración</h5>
+                            <p class="expandirSeis"><i class="bi bi-arrows-fullscreen"></i></p>
                         </div>
                     </div>
                 </div>
