seccion 5 casi terminada

--- a/index.html
+++ b/index.html
@@ -304,13 +304,16 @@
     <!--comienzo página cinco/-->
     <section class="seccionContacto">
         <div>
-            <h1>CONTACT</h1>
+            <h1 class="tituloSeccionContacto">CONTACTO</h1>
         </div>
+
         <div class="divInput">
-            <input type="text" placeholder="Your Name*">
-            <input type="text" placeholder="E-mail Adress*">
-            <input type="text" placeholder="Massage*">
-            <button>Submit</button>
+            <div class="password-container"></div>
+            <input class="ImputUnoSeccionCinco" type="text" placeholder="Nombre y Apellido*">
+            <input class="ImputUnoSeccionCinco" type="text" placeholder="Dirección de Email*">
+            <input class="ImputDosSeccionCinco" type="text" placeholder="Mensaje*">
+        </div>
+            <button class="botonContanto">Entregar</button>
         </div>
     </section>
    </main>
