footer casi terminado

--- a/index.html
+++ b/index.html
@@ -321,34 +321,40 @@
    <footer>
     <div class="divFooter">
     <div>
-        <p>LOGO</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <h2>Rodrigo</h2>
+        <p class="profesor">Profesor de Economía, Profesor de Informática </p>
+        <p class="diseñadorWeb">y Diseñador Web Principiante</p>
+        <div class="redesSocialesFooter">
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-twitter"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        </div>
     </div>
     <div>
     <div class="divQuick">
         <div class="divQuickLink">
             <h3>Quick Link</h3>
-            <button>Home</button>
-            <button>About me</button>
-            <button>Portfolio</button>
-            <button>Gallery</button>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Acerca de mí</a>
+                <a href="#">Services</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Contacto</a>
+            </nav>
         </div>   
         
-        <div>
-            <h3>Quick Link</h3>
-            <p>Data Research</p>
-            <p>User Analytics</p>
-            <p>UI/UX Desing</p>
-            <p>Logo Desing</p>
-            <p>Application UI</p>
-            <p>Banner for website</p>
-            <p>BG remove</p>
+        <div class="divQuickLinkDos">
+            <h3>Services</h3>
+            <a href="#">Data Research</a>
+            <a href="#">User Analytics</a>
+            <a href="#">UI/UX Desing</a>
+            <a href="#">Logo Desing</a>
+            <a href="#">Application UI</a>
+            <a href="#">Banner for website</a>
+            <a href="#">BG remove</a>
         </div>
-        <div>
-            <h3>Contact</h3>
+        <div class="divQuickLink">
+            <h3>Contacto</h3>
             <p>Mitre 1380, Vera-Santa Fe, Argentina</p>
             <p>Teléfono:+59-3483-511254</p>
             <p>Email: rodrigohmonte16@gmail.com</p>
@@ -356,10 +362,13 @@
     </div>   
     </div>
     </div>
-    <div>
-        <img src="" alt="">
+    <div class="copyright">
+        <div class="C">
+        <i class="bi bi-c-circle"></i>
+    </div>
         <p>2020, All Right Reserve</p>
     </div>
+    <button class="botonFooter"></button>
    </footer> 
 </body>
 </html>
