cambios en el header y el hero

--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Acerca de mí</a>
-        <a href="#">Services</a>
+        <a href="#">Servicios</a>
         <a href="#">Portfolio</a>
         <a href="#">Contacto</a>
     </nav>
     <button class="botonContratame"></i>Contratame</button>
+   
    </header>
    <!--comienzo del hero/-->
    <main>
+    <div class="figuras formas">
+        <img class="cuadradouno" src="img/cuandrado.png" alt="">
+        <img class="cuadradodos" src="img/cuandrado.png" alt="">
+        <img class="cuadradotres" src="img/cuandrado.png" alt="">
+        <img class="lineaondulada" src="img/lineaondulada.png" alt="">
+    </div>
     <section class="hero">
         <div>
             <h1 class="hola">HOLA</h1>
@@ -50,7 +57,7 @@
             <a href="#"><i class="bi bi-whatsapp"></i></a>
             <a href="#"><i class="bi bi-twitter"></i></a>
         </div>
-            
+        
     </section>
     <!--comienzo página dos/-->
     <section class="seccionDos">
