cambios en la seccion 3

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <h1 class="sobreMi">SOBRE</h1>
     <h1 class="mi">MI</h1>
     </div> 
+    <button class="botonImgPaginaDos"></button>
     <img class="imgPaginaDos" src="img/imgPaginaDos.jpg" alt="">
     </div>
     <div class="divContenedor">
@@ -74,11 +75,11 @@
             <div class="DivBotonesbio">
             <nav>
             <a href="#">Bio</a>
-            <a href="#">Education</a>
-            <a href="#">Experience</a>
+            <a href="#">Educación</a>
+            <a href="#">Experiencia</a>
             </nav>
            </div>
-            <p class="pBio" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia nihil architecto id nobis. Nobis, mollitia velit! Harum blanditiis explicabo</p>
+            <p class="pBio" >Mi nombre es Rodrigo Montenegro, soy profesor de Economía e Infomática en un colegio secundario, bibliotecario en una institución terciaria; y próximamente programador Frontend. </p>
         </div>
         <div>
             
