cambios en la seccion 3

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     </div>
     <div class="divaSeccionSkill">
         <a href="#">UI/UX</a>
-        <a href="#">Graphic Desing</a>
-        <a href="#">Languague</a>
+        <a href="#">Diseño Gráfico</a>
+        <a href="#">Languaje</a>
     </div>
     <div class="divAdobes">
         <div class="divAdobePhoto">
@@ -152,7 +152,7 @@
             </div>
             <p class="pDivAdobeXd">70%</p>
         <div class="divContenedorProto">
-            <p class="pproto">Prototyping</p>
+            <p class="pproto"> Creación de Prototipos</p>
             <div class="CirculosProto">
             <i class="bi bi-circle-fill"></i>
             <i class="bi bi-circle-fill"></i>
@@ -168,7 +168,7 @@
         </div>
         <p class="pDivProto">40%</p>
         <div class="divContenedorPlaning">
-            <p class="pplaning">Planning & Analytis</p>
+            <p class="pplaning">Planificación & Análisis</p>
             <div class="CirculosPlaning">
             <i class="bi bi-circle-fill"></i>
             <i class="bi bi-circle-fill"></i>
