cambios en la seccion 4

--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
     <section class="seccionPortfolio">
         <div>
             <h1 class="tituloSeccionPortfolio">PORTFOLIO</h1>
-        </div> 
+        </div>
         <div class="divaSeccionPortfolio">
             <a href="">All</a>
-            <a href="">Graphic Desing</a>
-            <a href="">Branding</a>
+            <a href="">Diseño Gráfico</a>
+            <a href="">Marca</a>
             <a href="">Web UI</a>
             <a href="">App UI</a>
         </div>
@@ -305,7 +305,7 @@
         </div>
         </div>
         <div>
-            <button class="botonPortfolio">View All</button>
+            <button class="botonPortfolio">Ver todo</button>
         </div>
     </section>
        
