cambios en el footer

--- a/index.html
+++ b/index.html
@@ -330,8 +330,10 @@
     <div class="divFooter">
     <div>
         <h2>Rodrigo</h2>
+        <div class="FooterProfe">
         <p class="profesor">Profesor de Economía, Profesor de Informática </p>
         <p class="diseñadorWeb">y Diseñador Web Principiante</p>
+        </div>
         <div class="redesSocialesFooter">
         <a href="#"><i class="bi bi-facebook"></i></a>
         <a href="#"><i class="bi bi-twitter"></i></a>
@@ -341,35 +343,44 @@
     <div>
     <div class="divQuick">
         <div class="divQuickLink">
-            <h3>Quick Link</h3>
+            <h3>Enlace Rápido</h3>
+            <div class="navHome">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Acerca de mí</a>
-                <a href="#">Services</a>
+                <a href="#">Servicios</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Contacto</a>
             </nav>
+        </div>
         </div>   
         
         <div class="divQuickLinkDos">
-            <h3>Services</h3>
-            <a href="#">Data Research</a>
-            <a href="#">User Analytics</a>
-            <a href="#">UI/UX Desing</a>
-            <a href="#">Logo Desing</a>
-            <a href="#">Application UI</a>
-            <a href="#">Banner for website</a>
-            <a href="#">BG remove</a>
+            <h3>Servicios</h3>
+            <div class="navHome">
+            <nav>
+            <a href="#">Investigación de Datos</a>
+            <a href="#">Análisis de Usuario</a>
+            <a href="#">Diseño UI/UX</a>
+            <a href="#">Diseño de Logo</a>
+            <a href="#">Aplicación UI</a>
+            <a href="#">Banner para Sitio Web</a>
+            <a href="#">Eliminar BG</a>
+            </nav>
+            </div>
         </div>
-        <div class="divQuickLink">
+        <div class="divQuickLinkTres">
             <h3>Contacto</h3>
+            <div class="navHomeTres">
             <p>Mitre 1380, Vera-Santa Fe, Argentina</p>
             <p>Teléfono:+59-3483-511254</p>
             <p>Email: rodrigohmonte16@gmail.com</p>
+            </div>
         </div>
     </div>   
     </div>
     </div>
+    <div class="DivCoppyright">
     <div class="copyright">
         <div class="C">
         <i class="bi bi-c-circle"></i>
@@ -377,6 +388,7 @@
         <p>2020, All Right Reserve</p>
     </div>
     <button class="botonFooter"></button>
+    </div>
    </footer> 
 </body>
 </html>
